# ddcbacklight

./: Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: build.yaml  docs.yaml
ddcutil-sys/: Cargo.toml  build.rs
ddcutil-sys/headers/: version.h
ddcutil-sys/src/: bindings.rs  lib.rs
ddcutil-sys/src/bindings/: c_api.rs  macros.rs  status.rs
src/: ascii.rs  cli.rs  ddc.rs  error.rs  lib.rs  main.rs
