[package]
name = "ddcbacklight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "xbacklight"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
ddcutil-sys = { workspace = true, feature = "bindgen" }
error-stack = "0.5"
thiserror = "2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[workspace]
members = [".", "ddcutil-sys"]

[workspace.dependencies]
ddcutil-sys = { path = "ddcutil-sys" }
