[package]
name = "ddcbacklight"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[[bin]]
name = "xbacklight"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.44"
colored = "3"
ddcutil-sys = { workspace = true, features = ["bindgen"] }
error-stack = "0.5"
semver = "1.0.27"
thiserror = "2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[workspace]
members = [".", "ddcutil-sys"]

[workspace.dependencies]
ddcutil-sys = { path = "ddcutil-sys" }
