[package]
name = "ddcutil-sys"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = { version = "0.71", optional = true }
pkg-config = "0.3.31"

[features]
bindgen = ["dep:bindgen"]
default = []
